MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.6 beta
* switch to apache license
* new JspTilesViewHandler for flawless Tiles support
* bug #992668 selectOneMenu doesn't restore the bean value if it's a primitive
* bug #992628 StateManager.SerializedView is not static
* bug #992629 FacesContext.getRenderKit() unimplemented
* bug #992452 HtmlTree doesn't properly restore state
* bug #991740 HtmlTreeRender icon URL conversion
* bug #991234 command links not working with javascript disabled
* bug #990395 myfaces.jar has bad taglib descriptor
* bug #990302 Navigation-Rule redirect
* bug #985274 f:view locale does not always work
* bug #978654 Input hidden value of null being converted to zero
* bug #979038 jsCookMenu component does not create dummyForm
* bug #979039 default-values for ConvertNumberTag and ConvertDateTimeTag
* changed build.xml - now myfaces-components are shipped via bin-distribution
* bug #985217 decorator-factory not supported
* splitting jar-files (myfaces.jar, myfaces-jsf-api.jar, myfaces-components.jar)
----------------------------------------------------------------------
Changes in Release 1.0.5 beta
* new faces configurator
* new validator (Regular Expressions)
* new validator (Equal)
* new component (rssticker)
* new component (dataScroller)
* new component (jscookMenu)
* modified renderers to comply with version 1.1 of the spec
* modified dataList to support active components (comandLink, ...)
* bug #955111	RestoreState of outputText with mixed ValueBinding attribute
* bug #962084	rowClasses in GridRenderer
* bug #967991	Action always called twice
* bug #952385  	decorator only for Viewhandler available
* bug #957938 	map-entries in faces-config.xml
* bug #970747	Incorrect rendering of <select> tag
* bug #972165	<h:selectBooleanCheckbox> and disabled attribute


----------------------------------------------------------------------