@@ -1,0 +1,16 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+
+<%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
+<%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
+<%@ taglib uri="http://myfaces.sourceforge.net/tld/myfaces_ext_0_9.tld" prefix="x"%>
+
+<html>
+<body>
+<f:view>
+
+    <h:graphicImage id="logo1" value="images/logo_value.jpg" />
+    <h:graphicImage id="logo2" url="images/logo_url.jpg" />
+
+</f:view>
+</body>
+</html>
